# fx-bharat

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  MIGRATIONS.md  README.md  example.py  example_mongo.py  example_postgres.py  pyproject.toml  requirements-dev.txt  requirements.txt  schema.sql
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
fx_bharat/: __init__.py
fx_bharat/db/: __init__.py  base_backend.py  forex.db  mongo_backend.py  mysql_backend.py  postgres_backend.py  relational_backend.py  sqlite_backend.py  sqlite_manager.py
fx_bharat/ingestion/: lme.py  models.py  rbi_csv.py  rbi_requests.py  rbi_selenium.py  rbi_workbook.py  sbi_pdf.py  strategy.py
fx_bharat/scripts/: populate_rbi_forex.py  populate_sbi_forex.py
fx_bharat/seeds/: __init__.py  populate_lme.py  populate_rbi_forex.py  populate_sbi_forex.py
fx_bharat/utils/: date_range.py  (+2 more)
tests/: conftest.py  test_base_backend.py  test_date_range.py  test_date_range_extra.py  test_fx_bharat.py  test_fx_bharat_init_extra.py  test_history_filters.py  test_ingestion_strategy.py  test_lme_extra.py  test_lme_ingestion.py  test_mongo_backend.py  test_mongo_backend_extra.py  test_populate_lme.py  test_populate_sbi_forex_paths.py  test_populate_sbi_forex_script.py  test_rbi_csv.py  test_rbi_csv_workbook_extra.py  test_rbi_seed_extra.py  test_rbi_selenium.py  test_rbi_workbook.py  test_relational_backend.py  test_relational_backend_extra.py  test_relational_backend_schema_patch.py  test_sbi_pdf.py  test_sbi_pdf_extra.py  test_sbi_seed_extra.py  test_sbi_seed_workflow.py  test_seed_rbi_no_reference_rate.py  test_seed_wrappers.py  test_seeds.py  test_seeds_init_extra.py  test_sqlite_backend.py  test_sqlite_manager.py  test_sqlite_manager_extra.py  test_sqlite_manager_fallback.py  test_sqlite_manager_schema_patch.py
